fix: leaderboard overflow issue

--- a/src/views/Leaderboard/leaderboard.css
+++ b/src/views/Leaderboard/leaderboard.css
@@ -1,5 +1,7 @@
 .leaderboard {
     padding: 1rem 0.5rem;
+    max-height: 100%;
+    overflow: hidden;
 }
 .leaderboard > h2 {
     text-align: center;
@@ -8,8 +10,10 @@
 }
 .userCardListContainer {
     max-width: 80%;
+    max-height: 90%;
+    overflow-y: auto;
     margin: 2rem auto 0 auto;
-    padding: 0.2rem 0;
+    padding: 0.4rem 0;
     border-radius: var(--roundness-s);
     background-color: var(--primaryColor500);
 }
